Add sweat pants and hoodie
- Add a system that allows to pull hood up and down
- Add light green clothing colour
- Add explicit "notuck: 0" to all tuckable clothes
- Fix mannequin not drawing back image of head items

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -826,6 +826,10 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	background-color: #38B20A;
 }
 
+.bg-light-green {
+	background-color: #7caf7c;
+}
+
 .bg-brown {
 	background-color: #4C2217;
 }
@@ -2383,6 +2387,11 @@ label {
 	filter: hue-rotate(120deg) saturate(100%) brightness(150%) contrast(100%);
 }
 
+.clothes-light-green {
+	-webkit-filter: hue-rotate(90deg) saturate(20%) brightness(260%) contrast(100%);
+	filter: hue-rotate(90deg) saturate(20%) brightness(260%) contrast(100%);
+}
+
 .clothes-black {
 	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(110%) contrast(110%);
 	filter: hue-rotate(0deg) saturate(0%) brightness(110%) contrast(110%);
@@ -2504,6 +2513,10 @@ label {
 	-webkit-filter: hue-rotate(120deg) saturate(100%) brightness(150%) contrast(100%);
 	filter: hue-rotate(120deg) saturate(100%) brightness(150%) contrast(100%);
 }
+.upper-light-green .colour-upper, .lower-light-green .colour-lower, .under_lower-light-green .colour-under_lower, .under_upper-light-green .colour-under_upper, .head-light-green .colour-head, .face-light-green .colour-face, .neck-light-green .colour-neck, .hands-light-green .colour-hands, .legs-light-green .colour-legs, .feet-light-green .colour-feet, .upper_acc-light-green .colour-upper_acc, .lower_acc-light-green .colour-lower_acc, .under_lower_acc-light-green .colour-under_lower_acc, .under_upper_acc-light-green .colour-under_upper_acc, .head_acc-light-green .colour-head_acc, .face_acc-light-green .colour-face_acc, .neck_acc-light-green .colour-neck_acc, .hands_acc-light-green .colour-hands_acc, .legs_acc-light-green .colour-legs_acc, .feet_acc-light-green .colour-feet_acc, .icon-light-green{
+	-webkit-filter: hue-rotate(90deg) saturate(20%) brightness(260%) contrast(100%);
+	filter: hue-rotate(90deg) saturate(20%) brightness(260%) contrast(100%);
+}
 .upper-black .colour-upper, .lower-black .colour-lower, .under_lower-black .colour-under_lower, .under_upper-black .colour-under_upper, .head-black .colour-head, .face-black .colour-face, .neck-black .colour-neck, .hands-black .colour-hands, .legs-black .colour-legs, .feet-black .colour-feet, .upper_acc-black .colour-upper_acc, .lower_acc-black .colour-lower_acc, .under_lower_acc-black .colour-under_lower_acc, .under_upper_acc-black .colour-under_upper_acc, .head_acc-black .colour-head_acc, .face_acc-black .colour-face_acc, .neck_acc-black .colour-neck_acc, .hands_acc-black .colour-hands_acc, .legs_acc-black .colour-legs_acc, .feet_acc-black .colour-feet_acc, .icon-black{
 	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(110%) contrast(110%);
 	filter: hue-rotate(0deg) saturate(0%) brightness(110%) contrast(110%);
@@ -2596,6 +2609,10 @@ label {
 .upper-wetgreen .colour-upper, .lower-wetgreen .colour-lower, .under_lower-wetgreen .colour-under_lower, .under_upper-wetgreen .colour-under_upper {
 	-webkit-filter: hue-rotate(120deg) saturate(0.5) brightness(140%) contrast(100%) opacity(0.5);
 	filter: hue-rotate(120deg) saturate(0.5) brightness(140%) contrast(100%) opacity(0.5);
+}
+.upper-wetlight-green .colour-upper, .lower-wetlight-green .colour-lower, .under_lower-wetlight-green .colour-under_lower, .under_upper-wetlight-green .colour-under_upper, .head-wetlight-green .colour-head, .face-wetlight-green .colour-face, .neck-wetlight-green .colour-neck, .hands-wetlight-green .colour-hands, .legs-wetlight-green .colour-legs, .feet-wetlight-green .colour-feet, .upper_acc-wetlight-green .colour-upper_acc, .lower_acc-wetlight-green .colour-lower_acc, .under_lower_acc-wetlight-green .colour-under_lower_acc, .under_upper_acc-wetlight-green .colour-under_upper_acc, .head_acc-wetlight-green .colour-head_acc, .face_acc-wetlight-green .colour-face_acc, .neck_acc-wetlight-green .colour-neck_acc, .hands_acc-wetlight-green .colour-hands_acc, .legs_acc-wetlight-green .colour-legs_acc, .feet_acc-wetlight-green .colour-feet_acc, .icon-wetlight-green{
+	-webkit-filter: hue-rotate(90deg) saturate(20%) brightness(260%) contrast(100%) opacity(0.5);
+	filter: hue-rotate(90deg) saturate(20%) brightness(260%) contrast(100%) opacity(0.5);
 }
 .upper-wetblack .colour-upper, .lower-wetblack .colour-lower, .under_lower-wetblack .colour-under_lower, .under_upper-wetblack .colour-under_upper {
 	-webkit-filter: hue-rotate(0deg) saturate(0%) brightness(90%) contrast(110%) opacity(0.5);
