--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -3877,3 +3877,13 @@ label {
 .clothes-price-container .numberslider-inline > .macro-numberslider {
 	display: flex;
 }
+
+.button {
+    width: fit-content;
+	border: 1px solid #888;
+    padding: 0 0.5em;
+}
+.button:hover {
+	background-color: #333;
+	cursor: pointer;
+}
