Xray images fix

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -1239,6 +1239,7 @@ span.number, span.suit {
 	left: 0px;
 	top: 0px;
 	z-index: 4;
+	height: 128px;
 }
 
 #xraypenile, #divsex #xraypenile {
@@ -1253,6 +1254,22 @@ span.number, span.suit {
 	left: 512px;
 	top: 0px;
 	z-index: 1;
+}
+
+#xrayandroidvaginal, #divsex #xrayandroidvaginal {
+	position: relative;
+	left: 0px;
+	top: -8px;
+	z-index: 3;
+	height: 128px;
+}
+
+#xrayandroidpenile, #divsex #xrayandroidpenile {
+	position: relative;
+	left: 0px;
+	top: -8px;
+	z-index: 2;
+	height: 128px;
 }
 
 #xrayandroidanal, #divsex #xrayandroidanal {
