- Fixes "chest_bind" clothes affecting doll in character menu - "New" is default renderer - "Both" is always available - "Debug renderer" is always available (enabled in options) - "Colours" debug menu is always available, cheat mode enables character recolouring

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -47,12 +47,19 @@ mouse.tooltip:hover span {
 	transition:.2s ease-in;
 }
 
-.closeButton, .macro-button {
+.closeButton, .macro-button, .buttonlike {
 	width: 100%;
 	font-size: 110%;
 	max-width: 240px;
 	background-color: #222;
 	border: 1px solid #444;
+}
+.buttonlike {
+	display: inline-block;
+	text-align: center;
+}
+.buttonlike.-noborder {
+	border: 1px solid transparent;
 }
 
 .widerButton button {
