--- a/game/02-CSS/canvasmodel.css
+++ b/game/02-CSS/canvasmodel.css
@@ -10,6 +10,14 @@ table.editorlayers {
     display: flex;
     flex-wrap: wrap;
 }
+.editorcolours .export-block {
+    float: right;
+    padding-top: 1.33em;
+}
+.editorcolours table th {
+    font-size: small;
+    text-align: center;
+}
 input.editlayer-z, input.editlayer-alpha {
     width: 3.5em;
     min-width: unset;
