Mirror changes and fixes

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -608,7 +608,7 @@ body.has-images #story-caption .storyCaptionDivExtended {
 	overflow: hidden;
 }
 
-#wardrobeLinks .selected {
+#wardrobeLinks .selected, #bodywritingMenuLinks .selected a {
 	color: #FFD700;
 	text-decoration: underline;
 }
