In-game notifier for new DoL patches

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -3988,3 +3988,51 @@ canvas {
 	background-color: #600;
 	box-shadow: inset 0px 0px 0px 2px #300;
 }
+
+#new-version-notification {
+    position: fixed;
+    top: 0.5em;
+    display: inline-flex;
+	flex-wrap: wrap;
+    border: 2px solid greenyellow;
+    border-radius: 4px;
+    background: green;
+    padding: 0 1em;
+    font-size: 90%;
+	align-items: center;
+}
+#new-version-notification .new-version-notification-buttons {
+	display: flex;
+	flex-wrap: wrap;
+}
+#new-version-notification .btn-update {
+	border: 1px solid greenyellow;
+    border-radius: 3px;
+    background-color: green;
+	color: greenyellow;
+    text-decoration: none;
+    align-self: center;
+	display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 0.5em;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+	padding: 0 0.5em;
+}
+#new-version-notification .btn-update a {
+	color: greenyellow;
+}
+#new-version-notification .btn-update:hover {
+    background-color: darkgreen;
+}
+#new-version-notification .btn-update::after {
+	filter: invert(0.75);
+    mix-blend-mode: luminosity;
+}
+
+a[target="_blank"]::after {
+  content: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAoAAAAKCAYAAACNMs+9AAAAQElEQVR42qXKwQkAIAxDUUdxtO6/RBQkQZvSi8I/pL4BoGw/XPkh4XigPmsUgh0626AjRsgxHTkUThsG2T/sIlzdTsp52kSS1wAAAABJRU5ErkJggg==);
+  margin: 0 3px 0 5px;
+  line-height: unset;
+}
