Wardrobe improvements (partial screen updates)

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -4036,3 +4036,20 @@ a[target="_blank"]::after {
   margin: 0 3px 0 5px;
   line-height: unset;
 }
+
+#action-popup {
+    position: fixed;
+    top: 0;
+	transform: translateY(-100%);
+    transition: all 0.25s;
+    border: 1px solid #888;
+    border-top: none;
+    border-radius: 0 0 5px 5px;
+    padding: 0 3em;
+    text-align: center;
+    background-color: #222;
+    z-index: 100;
+}
+#action-popup br {
+    display: none;
+}
