Initial version of the scene viewer

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -265,6 +265,40 @@ mouse.tooltip:hover span {
 	z-index: 1001;
 }
 
+#scenesViewer {
+	display: inline-flex;
+	flex-wrap: wrap;
+}
+
+#scenesViewer span {
+	padding: 2px;
+	border: solid 1px #aaa;
+	height: 30px;
+	width: 48%;
+	min-width: 400px;
+	margin: 0px 3px 3px;
+}
+
+#scenesViewerControls {
+	display: inline-flex;
+	margin: 2px;
+	padding: 5px;
+	min-width: 230px;
+	width: 47%;
+}
+
+#scenesViewerControls div {
+	flex-grow: 1;
+	text-align: center;
+}
+
+@media only screen and (max-width: 750px) {
+	#scenesViewerControls {
+		width: 100%;
+	}
+}
+
+
 #mobileStats {
 	position: fixed;
 	left: 0px;
