Improvement to visuals in wardrobe to reduce confusion

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -4087,3 +4087,26 @@ a[target="_blank"]::after {
 #action-popup br {
     display: none;
 }
+#wardrobewear {
+	display: table;
+	background-color: #0000;
+    border-radius: 3px;
+    transition: all 1.25s;
+}
+#wardrobewear.flash {
+	background-color: #edd464aa;
+}
+.wardrobe-action {
+	display: inline-block;
+	transition: all 1.25s;
+}
+.action-flash {
+	border-color: #edd464 !important;
+    color: #edd464 !important;
+}
+.action-flash a {
+	color: #edd464 !important;
+}
+.notransition {
+	transition: none !important;
+}
