Tidy up of the overlays and added new scenes to the Scene Viewer

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -421,7 +421,9 @@ mouse.tooltip:hover span {
 .right {
 	float: right;
 }
-
+.sidebarButtonSplit {
+	display: flex;
+}
 .saveMenuButton {
 	background-color: #4372FF !important;
 }
