Sidebar and settings layout changes

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -463,7 +463,7 @@ mouse.tooltip:hover span {
 	width: 100%;
 	min-width: 275px;
 	padding: 3px;
-	margin: 10px 0px;
+	margin-bottom: 20px;
 }
 
 .v-spacer {
