option to enable history controls
- adds a slider in setting, up to 20 states
- doesn't show controls when disabled
- disabled by default

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -42,6 +42,24 @@ mouse.tooltip:hover span {
 	width: 95%
 }
 
+#ui-bar-history {
+	position: relative;
+	z-index: 499;
+	font-size: 0.82em;
+	text-align: right;
+	padding-right: 3em;
+	display: none;
+}
+
+#ui-bar-history [id|=history] {
+	color: #666;
+	border: none;
+}
+
+#ui-bar-history [id|=history]:not(:first-child) {
+	margin-left: 0;
+}
+
 .passage {
 	-o-transition:.2s ease-in;
 	transition:.2s ease-in;
