style improvements for sidebar

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -50,7 +50,7 @@ mouse.tooltip:hover span {
 .closeButton, .macro-button, .buttonlike {
 	width: 100%;
 	font-size: 110%;
-	max-width: 240px;
+	max-width: 260px;
 	background-color: #222;
 	border: 1px solid #444;
 }
@@ -567,19 +567,48 @@ mouse.tooltip:hover span {
 body.has-images header#title {
 	display: none;
 }
+
 body.has-images #story-caption #storyCaptionDiv {
-	/* 256 px: images
-	2.5 em: ui-bar-body margin-top */
-	margin-top: calc(256px - 2.5em);
+	/* 232 px: img size, 1.32 em: stats line height, 4px: stats borders */
+	position: fixed;
+	top: calc(232px + 1.32em);
+	left: 10px;
+	height: calc(100% - 246px - 1.32em);
+	width: 268px;
+	padding-right: 2px;
+	padding-bottom: 12px;
+	overflow-y: scroll;
+	overflow-wrap: anywhere;
+	scrollbar-color: #444 #222;
 }
 
 body.has-images #story-caption .storyCaptionDivExtended {
-	margin-top: calc(281px - 2.5em) !important;
+	height: calc(100% - 246px - 2.64em)!important;
+	top: calc(232px + 2.64em)!important;
 }
+
+*::-webkit-scrollbar-thumb{
+	background-color: #444;
+}
+
+*::-webkit-scrollbar{
+	background-color: #222;
+	width: 10px;
+}
+
 
 #story-caption {
 	-webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
+	backface-visibility: hidden;
+}
+
+#ui-bar-body {
+	line-height: 1.32em;
+	overflow: hidden;
+}
+
+body.no-images #ui-bar-body {
+	overflow: auto!important;
 }
 
 .nostyle {
@@ -1064,26 +1093,27 @@ span.number, span.suit {
 }
 
 #stats {
-	height: 20px;
-	line-height: 20px;
-	width: 256px;
+	height: 1.25em;
+	line-height: 1.25em;
+	width: 280px;
 	overflow: hidden;
 	border-top: #fff 2px solid;
 	border-bottom: #fff 2px solid;
+	padding-top: 1px;
 	position: fixed;
-	top: 232px;
+	top: 228px;
 	left: 0px;
 	background-color: #222;
 	z-index: 1000;
 }
 
 #stats > * {
-	top: 232px;
+	top: 228px;
 	left: 0px;
 }
 
 .statsExtended {
-	height: 40px !important;
+	height: 2.5em !important;
 }
 
 .icon_ui {
@@ -1147,12 +1177,17 @@ span.number, span.suit {
 	z-index: 2;
 }
 
+#story-title {
+    font-size: 1.69em;
+    line-height: 1.25em;
+}
+
 #startingPlayerImage {
 	margin-top:130px;
 }
 
-#startingPlayerImage #img{
-	top: 100px;
+#startingPlayerImage #img {
+	top: 5.44em;
 	left: 20px;
 }
 
@@ -1992,7 +2027,7 @@ label {
 
 .meter {
 	position: relative;
-	height: 0.3em;
+	height: 0.25em;
 	width: 100%;
 	background-color: gray;
 	text-align: center;
@@ -2008,7 +2043,7 @@ label {
 
 .rightMeter {
 	position: relative;
-	height: 0.4em;
+	height: 0.375em;
 	width: 55%;
 	background-color: gray;
 	text-align: center;
@@ -2021,112 +2056,112 @@ label {
 	position: absolute;
 	left: 0;
 	top: 0;
-	height: 0.3em;
+	height: 0.25em;
 	background-color: #EC3535;
 	z-index: 0;
 	max-width: 100%;
 }
 
 .rightMeter .redbar {
-	height: 0.4em;
+	height: 0.375em;
 }
 
 .pinkbar {
 	position: absolute;
 	left: 0;
 	top: 0;
-	height: 0.3em;
+	height: 0.25em;
 	background-color: #E40081;
 	z-index: 0;
 	max-width: 100%;
 }
 
 .rightMeter .pinkbar {
-	height: 0.4em;
+	height: 0.375em;
 }
 
 .purplebar {
 	position: absolute;
 	left: 0;
 	top: 0;
-	height: 0.3em;
+	height: 0.25em;
 	background-color: #AA4BC8;
 	z-index: 0;
 	max-width: 100%;
 }
 
 .rightMeter .purplebar {
-	height: 0.4em;
+	height: 0.375em;
 }
 
 .bluebar {
 	position: absolute;
 	left: 0;
 	top: 0;
-	height: 0.3em;
+	height: 0.25em;
 	background-color: #4372FF;
 	z-index: 0;
 	max-width: 100%;
 }
 
 .rightMeter .bluebar {
-	height: 0.4em;
+	height: 0.375em;
 }
 
 .lbluebar {
 	position: absolute;
 	left: 0;
 	top: 0;
-	height: 0.3em;
+	height: 0.25em;
 	background-color: #559BC0;
 	z-index: 0;
 	max-width: 100%;
 }
 
 .rightMeter .lbluebar {
-	height: 0.4em;
+	height: 0.375em;
 }
 
 .tealbar {
 	position: absolute;
 	left: 0;
 	top: 0;
-	height: 0.3em;
+	height: 0.25em;
 	background-color: #08C1C1;
 	z-index: 0;
 	max-width: 100%;
 }
 
 .rightMeter .tealbar {
-	height: 0.4em;
+	height: 0.375em;
 }
 
 .greenbar {
 	position: absolute;
 	left: 0;
 	top: 0;
-	height: 0.3em;
+	height: 0.25em;
 	background-color: #38B20A;
 	z-index: 0;
 	max-width: 100%;
 }
 
 .rightMeter .greenbar {
-	height: 0.4em;
+	height: 0.375em;
 }
 
 .goldbar {
 	position: absolute;
 	left: 0;
 	top: 0;
-	height: 0.3em;
+	height: 0.25em;
 	background-color: #FFD700;
 	z-index: 0;
 	max-width: 100%;
 }
 
 .rightMeter .goldbar {
-	height: 0.4em;
+	height: 0.375em;
 }
 
 /*
