Bulk produce selling

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -283,7 +283,7 @@ mouse.tooltip:hover span {
 	z-index: 1001;
 }
 
-#scenesViewer {
+#scenesViewer, #produceDisplay {
 	display: inline-flex;
 	flex-wrap: wrap;
 }
@@ -297,7 +297,15 @@ mouse.tooltip:hover span {
 	margin: 0px 3px 3px;
 }
 
-#scenesViewerControls {
+#produceDisplay .produceItem {
+	padding: 2px;
+	border: solid 1px #aaa;
+	width: 48%;
+	min-width: 400px;
+	margin: 0px 3px 3px;
+}
+
+#scenesViewerControls, #produceDisplayControls {
 	display: inline-flex;
 	margin: 2px;
 	padding: 5px;
@@ -305,15 +313,19 @@ mouse.tooltip:hover span {
 	width: 47%;
 }
 
-#scenesViewerControls div {
+#scenesViewerControls div, #produceDisplayControls div {
 	flex-grow: 1;
 	text-align: center;
 }
 
 @media only screen and (max-width: 750px) {
-	#scenesViewerControls {
+	#scenesViewerControls, #produceDisplayControls, .produceItem {
 		width: 100%;
 	}
+}
+
+#produceConfirm {
+	width: 100%;
 }
 
 
