Teleport cheat reformatting (columns)

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -4286,3 +4286,14 @@ img, canvas {
 	max-width: 100%;
 	height: auto;
 }
+
+/*noeinan mod START*/
+/*css for two columns*/
+
+.twocolumn {
+	-webkit-column-count: 2;
+	-moz-column-count: 2;
+	column-count: 2;
+}
+
+/*noeinan mod END*/
