css three column rename

--- a/game/02-CSS/base.css
+++ b/game/02-CSS/base.css
@@ -4290,7 +4290,7 @@ img, canvas {
 /*noeinan mod START*/
 /*css for two columns*/
 
-.twocolumn {
+.threecolumn {
 	-webkit-column-count: 3;
 	-moz-column-count: 3;
 	column-count: 3;
